# latex-subfigs-combiner

./: .gitignore  LICENSE  README.md  pyproject.toml
latex_subfigs_combiner/: combine_subfigures.py
tests/: test_latex_subfigs_combiner.py
tests/data/latex-project/: paper.tex
